--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-website",
   "version": "0.1.0",
+  "homepage":"https:MKBeSomeone.github.io/MadisonKBoudreaux",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
@@ -14,6 +15,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
