--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-website",
   "version": "0.1.0",
-  "homepage":"https:MKBeSomeone.github.io/MadisonKBoudreaux",
+  "homepage":"https://mkbesomeone.github.io/MadisonKBoudreaux/",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
